apps/karma/k8s.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: monitoring
  labels:
    app.kubernetes.io/name: karma
  annotations:
    argocd.argoproj.io/sync-wave: "16"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: karma
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
